# fsm

./: CMakeLists.txt  Makefile
src/: fsm.c  fsm.h
